<resources>

    <string-array name="hour_times">
        <item>12</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>

    <string-array name="minute_times">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>

    <string-array name="timer_hours">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>85</item>
        <item>86</item>
        <item>87</item>
        <item>88</item>
        <item>89</item>
        <item>90</item>
        <item>91</item>
        <item>92</item>
        <item>93</item>
        <item>94</item>
        <item>95</item>
        <item>96</item>
        <item>97</item>
        <item>98</item>
        <item>99</item>
        <item>100</item>
    </string-array>


    <string name="app_name">Focus</string>
    <string name="notifications_bottom_bar_tab_title">Notifications</string>
    <string name="profiles_bottom_bar_tab_title">Profiles</string>
    <string name="schedules_bottom_bar_tab_title">Schedules</string>
    <string name="timer_bottom_bar_tab_title">Timers</string>
    <string name="create_profile">Create Profile</string>
    <string name="confirmation_message">You pressed confirm!</string>
    <string name="add_profile">Add Profile</string>
    <string name="create_schedule">Create Schedule</string>
    <string name="create_timer">Create Timer</string>
    <string name="default_title_profile_adapter">Default Profile Title</string>
    <string name="AllProfileKey">AllProfileKey</string>
    <string name="ActiveProfilesKey">ActiveProfilesKey</string>
    <string name="SchedulesKey">SchedulesKey</string>
    <string name="TimersKey">TimersKey</string>
    <string name="AppsKey">AppsKey</string>
    <string name="ActiveAppsKey">ActiveAppsKey</string>
    <string name="profile_name">Profile Name</string>
    <string name="schedule_name_edit_text_hint">Schedule Name</string>
    <string name="monday">Monday</string>
    <string name="monday_single">M</string>
    <string name="tuesday_single">T</string>
    <string name="sunday_single">Su</string>
    <string name="wednesday_single">W</string>
    <string name="thursday_single">Th</string>
    <string name="friday_single">F</string>
    <string name="saturday_single">Sa</string>
    <string name="time_block_list_label">Active Times</string>
    <string name="schedule_repeats_weekly">Repeat Weekly?</string>
    <string name="default_timeblock_start">Monday: 3:51 PM</string>
    <string name="default_timeblock_to_symbol">-</string>
    <string name="default_timeblock_end">Friday: 6:00PM</string>
    <string name="endTimeKey">endTime</string>
    <string name="end_time_key">endtimekey</string>
    <string name="time_picker_end_title">Choose End Time</string>
    <string name="time_picker_start_title">Choose Start Time</string>
    <string name="add_time_block">Add Time Block</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="choose_day">Day of Week</string>
    <string name="start_time">Start Time</string>
    <string name="AM">AM</string>
    <string name="PM">PM</string>
    <string name="end_time">End Time</string>
    <string name="colon">:</string>
    <string name="ActiveProfiles">Active Profiles</string>
    <string name="scheduleKey">ScheduleKey</string>
    <string name="timeBlockKey">TimeBlockKey</string>
    <string name="schedule_is_new">scheduleIsNewKey</string>
    <string name="timeBlockIndex">TimeBlockIndexKey</string>
    <string name="timer_default_time">12:34</string>
    <string name="remainingtime">Remaining Time:</string>
    <string name="hour_string">Hour</string>
    <string name="minute_string">Minute</string>
    <string name="second_string">Second</string>
    <string name="service_name">NotificationBlockerService</string>
    <string name="accept">Accept</string>
    <string name="notfication_blocker_service">Notification Blocker Service</string>
    <string name="notification_listener_service_explanation">"For the the app to work you need to enable the Notification Listener Permission. Enable it now?"</string>
    <string name="usage_access_service_explanation">"For the the app to work you need to enable the Usage Access Permission. Enable it now?"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="default_notification_title">Default Notification</string>
    <string name="default_notification_description">This is a notifications, and it notifies you of things.</string>
    <string name="notification_permissions_title">Allow Notification Access</string>
    <string name="usage_permissions_title">Allow Usage Access</string>
    <string name="deny">Deny</string>
    <string name="delete">Delete Profile</string>
    <string name="delete_schedule">Delete Schedule</string>
    <string name="schedule_id_to_delete">ScheduleIdToDeleteKey</string>
    <string name="tooManyProfiles">You cannot create more than 20 profiles!</string>
    <string name="noAppsSelected">Select at least one app to create a profile!</string>
    <string name="notUniqueName">Profile name already in use!</string>
    <string name="pleaseEnterName">Please enter a name for your profile!</string>
    <string name="scheduleHasNoName">Please enter a name for this schedule!</string>
    <string name="scheduleHasNoProfiles">Please add at least one profile to this schedule.</string>
    <string name="scheduleHasNoTimeBlocks">Please add some TimeBlocks to this schedule!</string>
    <string name="scheduleNameIsTaken">The name for you\'ve chosen is already in use.</string>
    <string name="timerNoSelectedProfiles">Please select a profile.</string>
    <string name="timerAllValuesZero">Please select a time greater than 10 seconds!</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="signed_out">Signed Out</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="prompt_password_confirm">Please Confirm Password</string>
    <string name="prompt_username">Please enter a username</string>
    <string name="prompt_name">Please enter your full name</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_password">Please enter a password</string>
    <string name="match_password">please  enter a matching password</string>
    <string name="invalid_name">Please enter your full name</string>
    <string name="sign_in_google">Sign In With Google</string>
    <string name="title_activity_calendar_delete">CalendarDelete</string>
    <string name="logout">Logout</string>
    <string name="ACCOUNT_NAME">account_name</string>
    <string name="ACCOUNT_INFO">account_info</string>
    <string name="add_to_calendar_prompt">Would you like to sync schedule events created on Focus! with your google Calendar?</string>
    <string name="signing_in">Signing In</string>
    <string name="firstStartKey">FIRSTSTARTKEYLOLOLOL</string>
    <string name="firstProfilesKey">FIRSTPROFILEKEYLOL</string>
    <string name="firstCreateProfilesKey">FIRSTCREATEPROFILESLOL</string>
    <string name="firstScheduleKey">FIRSTSCHEDULELOL</string>
    <string name="firstCreateScheduleKey">FIRSTCREATESCHEDULELOL</string>
    <string name="firstCreateTimeBlockKey">FIRSTCREATETIMEBLOCKLOL</string>
    <string name="firstTimer">FIRSTTIMERLOL</string>
    <string name="firstCreateTimer">FIRSTCRTEATETIMERLOLOWASDF</string>
    <string name="firstNotifications">FIRSTNOTIFICATIONSLOL</string>

</resources>
